# df-data-distribution

./: .env.aws_ec2_container  .env.aws_ec2_native  .env.aws_ecs_container  .env.on_prem_vm_native  .gitignore  Makefile  README.md  app_env.aws_ec2_container.dev.env  app_env.aws_ec2_native.dev.env  app_env.on_prem_vm_native.dev.env  pyproject.toml
cfg/: api_log.ini  app_config.dev.yaml  config_dev.yaml
data/in/: acct_positions_20241224.recon
sql/: ext_asset_value_agg.sql
src/dist_app/: dist_app_api.py  dist_app_cli.py  dist_app_core.py  settings.py
src/dist_app/dist_spark/: extracter.py
src/pyspark_apps/: extracter.py
