[build-system]
requires = ["setuptools >= 64.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dist_app"
version = "0.0.1"
authors = [
  { name="Rajakumaran Arivumani", email="author@example.com" },
]
description = "Data distribution app package"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
#license = "MIT"
#license-files = ["LICEN[CS]E*"]
dependencies = [
  # app specific 
  "pyspark == 3.5.4",
  # my packages
  "utils @ git+https://github.com/dexplorer/utils",
  "metadata @ git+https://github.com/dexplorer/df-metadata",
  "app_calendar @ git+https://github.com/dexplorer/df-app-calendar",
  "config @ git+https://github.com/dexplorer/df-config",
  # "dq_app @ git+https://github.com/dexplorer/df-data-quality.git@v0.0.1",
  "dq_app @ git+https://github.com/dexplorer/df-data-quality",
  "dqml_app @ git+https://github.com/dexplorer/df-data-quality-ml",
  "dl_app @ git+https://github.com/dexplorer/df-data-lineage",
  "ingest_app @ git+https://github.com/dexplorer/df-data-ingestion",
]
keywords = ["data", "distribution", "etl", "elt", "framework", "extract"]

[project.optional-dependencies]
api = [
  "fastapi" , 
  "uvicorn[standard]", 
  ]
cli = [
  "click",
]
test = [
  # standard dev tools
  "pytest",
  "pytest-cov",
  "pylint",
  "black",
  "ipython",
]

[project.scripts]
dist-app-cli = "dist_app.dist_app_cli:main"
dist-app-api = "dist_app.dist_app_api:main"

[project.urls]
Homepage = "https://profile.rajakumaran.in"
Documentation = "https://readthedocs.org"
Repository = "https://github.com/dexplorer/df-data-distribution.git"
Issues = "https://github.com/dexplorer/df-data-distribution/issues"
Changelog = "https://github.com/dexplorer/df-data-distribution/blob/master/CHANGELOG.md"
