[build-system]
requires = ["setuptools >= 64.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dist_app"
version = "0.0.1"
authors = [
  { name="Rajakumaran Arivumani", email="author@example.com" },
]
description = "Data distribution app package"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
#license = "MIT"
#license-files = ["LICEN[CS]E*"]
dependencies = [
  # app specific 
  "pyspark == 3.5.4",
  "python-dotenv", 
]
keywords = ["data", "distribution", "etl", "elt", "framework", "extract"]

[project.optional-dependencies]
my-packages-local = [
  # my packages (installed locally)
  "utils[spark]",
  "utils[aws]",
  "metadata",
  "app_calendar",
  "config",
  "gov",
  #"dl_app", 
  #"dp_app", 
  #"dq_app", 
  #"dqml_app", 
  #"dr_app", 
]
my-packages-container = [
  # my packages (source in container)
  "utils[spark] @ file:///packages/utils",
  "utils[aws] @ file:///packages/utils",
  "metadata @ file:///packages/df-metadata",
  "app_calendar @ file:///packages/df-app-calendar",
  "config @ file:///packages/df-config",
  "gov @ file:///packages/df-data-governance",
  #"dl_app @ file:///packages/df-data-lineage",
  #"dp_app @ file:///packages/df-data-profile",
  #"dq_app @ file:///packages/df-data-quality",
  #"dqml_app @ file:///packages/df-data-quality-ml",
  #"dr_app @ file:///packages/df-data-recon",
]
api = [
  "fastapi" , 
  "uvicorn[standard]", 
  ]
cli = [
  "click",
]
test = [
  # standard dev tools
  "pytest",
  "pytest-cov",
  "pylint",
  "black",
  "ipython",
]
all-dev = [
  "ingest_app[my-packages-local, cli, api, test]"
  ]
all = [
  "ingest_app[my-packages-container, cli, api]"
  ]

[project.scripts]
dist-app-cli = "dist_app.dist_app_cli:main"
dist-app-api = "dist_app.dist_app_api:main"

[project.urls]
Homepage = "https://profile.rajakumaran.in"
Documentation = "https://readthedocs.org"
Repository = "https://github.com/dexplorer/df-data-distribution.git"
Issues = "https://github.com/dexplorer/df-data-distribution/issues"
Changelog = "https://github.com/dexplorer/df-data-distribution/blob/master/CHANGELOG.md"
